<resources>
    <string name="app_name">蓝牙打印</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="login">登 录</string>
    <string name="login_name">登录名:</string>
    <string name="login_password">密 码:</string>
    <string name="search_equipment">搜索设备</string>
    <string name="no_paired_device">未配对设备</string>
    <string name="paired_device">已配对设备</string>
    <string name="texttitle">Copyright 2015-2017 @ZhunShiChi. All Rights Reserved.</string>
    <string name="service_test">服务器测试</string>
    <string name="bluetooth_test">打印机测试</string>
    <string name="setdata_data">小票设置</string>
    <string name="setdata_number">设置小票打印数量</string>
    <string name="setdata_input">输入1-10:</string>
    <string name="setdata_save">保存</string>
    <string name="setdata_cancel">退出</string>
</resources>
