<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"              android:id="@+id/largeLabe"              android:layout_width="match_parent"              android:layout_height="match_parent"              android:layout_gravity="center"              android:orientation="horizontal"              android:paddingTop="10dp"              android:onClick="onClick"    >    <ImageView        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_weight="3"        android:scaleType="center"        android:src="@mipmap/transparent"        />    <LinearLayout        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:layout_weight="1"        android:background="@drawable/activity_style"        android:orientation="vertical">        <TextView            android:id="@+id/twoSet"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:layout_weight="1"            android:gravity="center"            android:enabled="false"            android:textColor="@color/white"            android:layout_marginTop="20dp"            android:text="@string/setdata_number"            android:textSize="18sp"/>        <EditText            android:id="@+id/inttext"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:layout_weight="1"            android:background="@drawable/input_style"            android:digits="1234567890"            android:hint="@string/setdata_input"            android:layout_marginTop="20dp"            android:inputType="number"            android:padding="8dp"            android:layout_marginStart="20dp"            android:layout_marginEnd="20dp"            android:selectAllOnFocus="true"            android:textColor="@color/gray"            android:textColorHint="#BBBBBB"            android:textSize="16sp"/>        <LinearLayout            android:layout_width="match_parent"            android:layout_height="match_parent"            android:layout_margin="10dp"            android:gravity="center"            android:orientation="vertical">            <Button                android:id="@+id/saveSet"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_weight="1"                android:textColor="@color/white"                android:text="@string/setdata_save"                android:layout_marginTop="20dp"                />            <Button                android:id="@+id/cancel"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_weight="1"                android:text="@string/setdata_cancel"                android:layout_marginTop="10dp"                android:textColor="@color/white"                />        </LinearLayout>    </LinearLayout>    <ImageView        android:layout_width="match_parent"        android:layout_height="match_parent"        android:layout_weight="3"        android:scaleType="center"        android:src="@mipmap/transparent"        /></LinearLayout>